[Refactor] Change navigation design

--- a/Oops-Android/app/src/main/res/layout/activity_main.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/White"
-        app:itemIconSize="64dp"
+        app:itemBackground="@color/White"
+        app:itemIconSize="50dp"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
