--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -50,7 +50,7 @@
         android:id="@+id/cv_sting_friend_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
@@ -61,7 +61,7 @@
             android:id="@+id/iv_sting_friend_1"
             android:layout_width="95dp"
             android:layout_height="95dp"
-            android:background="@color/Gray_300"/>
+            android:src="@drawable/ic_friends_profile_default_50"/>
     </androidx.cardview.widget.CardView>
 
     <!-- 친구2 -->
@@ -69,7 +69,6 @@
         android:id="@+id/cv_sting_friend_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
         android:layout_marginStart="44dp"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
@@ -80,7 +79,7 @@
             android:id="@+id/iv_sting_friend_2"
             android:layout_width="79dp"
             android:layout_height="79dp"
-            android:background="@color/Gray_300"/>
+            android:src="@drawable/ic_friends_profile_default_50"/>
     </androidx.cardview.widget.CardView>
 
     <!-- 친구3 -->
@@ -88,18 +87,18 @@
         android:id="@+id/cv_sting_friend_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="81dp"
         android:layout_marginEnd="89dp"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
         app:cardElevation="@null"
         app:layout_constraintTop_toBottomOf="@id/cv_sting_friend_1"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_sting_friends">
         <ImageView
             android:id="@+id/iv_sting_friend_3"
             android:layout_width="79dp"
             android:layout_height="79dp"
-            android:background="@color/Gray_300"/>
+            android:src="@drawable/ic_friends_profile_default_50"/>
     </androidx.cardview.widget.CardView>
 
     <!-- 친구4 -->
@@ -107,18 +106,37 @@
         android:id="@+id/cv_sting_friend_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
         android:layout_marginStart="93dp"
+        android:layout_marginBottom="60dp"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
         app:cardElevation="@null"
-        app:layout_constraintTop_toBottomOf="@id/cv_sting_friend_2"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_sting_friends">
         <ImageView
             android:id="@+id/iv_sting_friend_4"
             android:layout_width="114dp"
             android:layout_height="114dp"
-            android:background="@color/Gray_300"/>
+            android:src="@drawable/ic_friends_profile_default_50"/>
+    </androidx.cardview.widget.CardView>
+
+    <!-- 친구5 -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_sting_friend_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="100dp"
+        android:scaleType="centerCrop"
+        app:cardElevation="@null"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_sting_sub_title"
+        app:layout_constraintStart_toStartOf="parent">
+        <ImageView
+            android:id="@+id/iv_sting_friend_5"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_friends_profile_default_50"/>
     </androidx.cardview.widget.CardView>
 
     <ImageView
