--- a/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_inventory_stuff_box_rv.xml
@@ -22,9 +22,7 @@
             android:id="@+id/item_inventory_stuff_image_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/untitled"
-            android:background="#F3F3F3"/>
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
     <!-- 물품 이름 -->
