--- a/Oops-Android/app/src/main/res/drawable/all_radius_12.xml
+++ b/Oops-Android/app/src/main/res/drawable/all_radius_12.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 친구 목록 화면의 리스트 박스 -->
+<!-- 친구 목록 화면의 리스트 박스, 홈 화면의 할 일 리스트 박스 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/White"/>
     <corners android:radius="12dp"/>
