--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -7,9 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Gray_100"
-    tools:context=".ui.Main.Home.HomeWeeklyFragment"
+    tools:context=".ui.Main.Home.WeeklyFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- 주간 캘린더 -->
     <LinearLayout
         android:id="@+id/cLayout_home_calendar"
         android:layout_width="match_parent"
@@ -63,7 +64,6 @@
             android:orientation="horizontal"
             android:overScrollMode="never"
             android:nestedScrollingEnabled="false"
-            tools:itemCount="7"
             tools:listitem="@layout/item_home_calendar"
             app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/iv_home_calendar"
@@ -127,6 +127,7 @@
                     app:layout_constraintEnd_toEndOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- 챙겨야 할 것 -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_stuff"
                 android:layout_width="match_parent"
@@ -137,7 +138,8 @@
                 android:overScrollMode="never"
                 android:nestedScrollingEnabled="false"
                 android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_home_stuff"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -147,10 +149,39 @@
                 android:textColor="#1C1C1C"
                 android:fontFamily="@font/pretendard_bold"
                 android:layout_marginTop="24dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:layout_marginStart="16dp"/>
 
+            <!-- 할 일이 없을 때 보이는 뷰 -->
+            <LinearLayout
+                android:id="@+id/lLayout_home_todo_default"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="72dp">
+
+                <!-- default 텍스트 -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="외출 계획이 없으신가요?"
+                    android:textSize="18sp"
+                    android:textColor="@color/Gray_400"
+                    android:fontFamily="@font/pretendard_bold" />
+
+                <!-- default 텍스트 -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="우측 상단 + 버튼을 눌러 추가해 주세요"
+                    android:textSize="14sp"
+                    android:textColor="@color/Gray_400"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:layout_marginTop="8dp"/>
+
+            </LinearLayout>
+
+            <!-- 할일 목록 -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_todo"
                 android:layout_width="match_parent"
@@ -159,15 +190,18 @@
                 android:nestedScrollingEnabled="false"
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="16dp"
+                tools:listitem="@layout/item_home_todo"/>
 
+            <!-- 할일 추가 -->
             <ImageButton
                 android:id="@+id/iBtn_home_todo_add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_todo_add_24"
                 app:tint="@color/Gray_500"
-                android:background="@drawable/friends_box"
+                android:background="@drawable/all_radius_12"
+                android:visibility="gone"
                 android:paddingTop="18dp"
                 android:paddingBottom="18dp"
                 android:layout_marginStart="16dp"
