--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/friends_box"
+    android:background="@drawable/all_radius_12"
     android:layout_marginTop="12dp">
 
     <!-- 프로필 사진 -->
