--- a/Oops-Android/app/src/main/res/layout/item_home_calendar.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_calendar.xml
@@ -11,45 +11,51 @@
 
     <!-- 기존 날짜 -->
     <FrameLayout
-        android:id="@+id/fLayout_home_calendar_default"
+        android:id="@+id/fLayout_home_calendar_default_top"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="14dp"
-        android:paddingBottom="14dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:background="@drawable/all_radius_50"
-        android:backgroundTint="@color/White"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
+        android:layout_height="wrap_content">
+        <FrameLayout
+            android:id="@+id/fLayout_home_calendar_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_gravity="center"
+            android:background="@drawable/all_radius_50"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!-- 요일 -->
-            <TextView
-                android:id="@+id/tv_home_calendar_day_default"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="S"
-                android:textSize="12sp"
-                android:textColor="#707070"
-                android:fontFamily="@font/pretendard_bold"/>
+                android:orientation="vertical"
+                android:gravity="center">
 
-            <!-- 일 -->
-            <TextView
-                android:id="@+id/tv_home_calendar_date_default"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2"
-                android:textSize="12sp"
-                android:textColor="#333333"
-                android:fontFamily="@font/pretendard_bold"
-                android:layout_marginTop="18dp"/>
-        </LinearLayout>
+                <!-- 요일 -->
+                <TextView
+                    android:id="@+id/tv_home_calendar_day_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"
+                    android:textSize="12sp"
+                    android:textColor="#707070"
+                    android:fontFamily="@font/pretendard_bold"/>
+
+                <!-- 일 -->
+                <TextView
+                    android:id="@+id/tv_home_calendar_date_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2"
+                    android:textSize="12sp"
+                    android:textColor="#333333"
+                    android:fontFamily="@font/pretendard_bold"
+                    android:layout_marginTop="18dp"/>
+            </LinearLayout>
+        </FrameLayout>
     </FrameLayout>
+
 
     <!-- 선택된 날짜 -->
     <FrameLayout
