--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -127,6 +127,35 @@
                     app:layout_constraintEnd_toEndOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- 다 챙겼을 경우 -->
+            <LinearLayout
+                android:id="@+id/lLayout_home_stuff_complete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="24dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="36dp"
+                    android:text="소지품을 모두 챙겼어요"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:textColor="@color/Gray_400"
+                    android:textAlignment="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="오늘도 즐거운 외출 되세요"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:textColor="@color/Gray_400"
+                    android:textAlignment="center"
+                    android:layout_marginBottom="36dp"/>
+            </LinearLayout>
             <!-- 챙겨야 할 것 -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_stuff"
