--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -70,7 +70,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/view_home_calendar"/>
-        
+
         <View
             android:id="@+id/view_home_calendar"
             android:layout_width="77dp"
@@ -117,7 +117,7 @@
                     app:layout_constraintStart_toStartOf="parent"/>
 
                 <ImageView
-                    android:id="@+id/iv_home_stuff_add"
+                    android:id="@+id/iv_home_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_edit_24"
