Feat: Implementation of todo list
- popupwindow click event

--- a/Oops-Android/app/src/main/res/drawable/all_radius_08.xml
+++ b/Oops-Android/app/src/main/res/drawable/all_radius_08.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 홈 화면의 소지품 배경 -->
+<!-- 홈 화면의 소지품 배경, 홈 화면의 일정 popup 박스 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="8dp"/>
     <solid android:color="@color/White"/>
