--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:id="@+id/cLayout_home_calendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/home_calendar_background"
         android:elevation="11dp"
         android:orientation="vertical"
@@ -85,10 +85,11 @@
             app:layout_constraintBottom_toBottomOf="@id/cLayout_home_calendar"/>
     </LinearLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/cLayout_home_calendar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -156,6 +157,7 @@
                     android:textAlignment="center"
                     android:layout_marginBottom="36dp"/>
             </LinearLayout>
+
             <!-- 챙겨야 할 것 -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_stuff"
@@ -220,7 +222,12 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                tools:listitem="@layout/item_home_todo"/>
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_home_todo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <!-- 할일 추가 -->
             <ImageButton
@@ -239,7 +246,7 @@
             <!-- 공백 -->
             <View
                 android:layout_width="match_parent"
-                android:layout_height="72dp"/>
+                android:layout_height="270dp"/>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
