--- a/Oops-Android/app/src/main/res/layout/item_home_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_todo.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/iBtn_home_todo_complete"
-        app:layout_constraintEnd_toStartOf="@id/iv_home_edit"
+        app:layout_constraintEnd_toStartOf="@id/iv_home_todo_edit"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- 할 일 태그 -->
@@ -39,7 +39,6 @@
             android:id="@+id/tv_home_todo_tag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="할 일 태그"
             android:textColor="@color/Gray_400"
             android:textSize="12sp"
             android:fontFamily="@font/pretendard_regular"
@@ -48,10 +47,9 @@
 
         <!-- 할 일 이름 -->
         <TextView
-            android:id="@+id/tv_home_todo_title"
+            android:id="@+id/tv_home_todo_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="이름"
             android:textColor="#1C1C1C"
             android:textSize="14sp"
             android:fontFamily="@font/pretendard_medium"
@@ -62,7 +60,7 @@
 
     <!-- 수정&삭제 버튼 -->
     <ImageView
-        android:id="@+id/iv_home_edit"
+        android:id="@+id/iv_home_todo_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_more_27"
