Feat: Create a month calendar
- 월간 캘린더 구현
- CalendarUtils 파일을 만들어서, 캘린더를 구현할 때 자주 사용하는 함수 및 변수 정리

--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -10,7 +10,7 @@
     tools:context=".ui.Main.Home.WeeklyFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- 주간 캘린더 -->
+    <!-- 캘린더 -->
     <LinearLayout
         android:id="@+id/cLayout_home_calendar"
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
 
             <!-- 일주일/월별 전환 버튼 -->
             <ImageView
-                android:id="@+id/iv_home_calendar"
+                android:id="@+id/iv_home_switch_calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_calendar_24"
@@ -55,21 +55,35 @@
 
         <!-- 주간 달력 -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_home_calendar"
+            android:id="@+id/rv_home_weekly_calendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
+            android:layout_marginBottom="24dp"
             android:orientation="horizontal"
             android:overScrollMode="never"
             android:nestedScrollingEnabled="false"
             tools:listitem="@layout/item_home_calendar"
-            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/iv_home_calendar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/view_home_calendar"/>
+            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"/>
+
+        <!-- 월간 달력 -->
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/mcv_home_monthly_calendarview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:visibility="gone"
+            app:mcv_firstDayOfWeek="sunday"
+            app:mcv_weekDayLabels="@array/calendar_week_array2"
+            app:mcv_weekDayTextAppearance="@style/weekTextStyle"
+            app:mcv_dateTextAppearance="@style/CalendarViewCustom"
+            app:mcv_showWeekDays="true"
+            app:mcv_selectionColor="@color/Main_500"
+            app:mcv_selectionMode="single"/>
 
         <View
             android:id="@+id/view_home_calendar"
@@ -77,12 +91,8 @@
             android:layout_height="3dp"
             android:background="@drawable/signup_btn_bg"
             android:backgroundTint="#26707070"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="12dp"
-            android:layout_gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/cLayout_home_calendar"/>
+            android:layout_gravity="center"/>
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
