--- a/Oops-Android/app/src/main/res/values/array.xml
+++ b/Oops-Android/app/src/main/res/values/array.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 캘린더 요일 -->
-    <string-array name="calendar_day_array">
+    <string-array name="calendar_week_array">
         <item>S</item>
         <item>M</item>
         <item>T</item>
         <item>W</item>
         <item>T</item>
         <item>F</item>
+        <item>S</item>
+    </string-array>
+    <!-- 월간 캘린더용 요일 -->
+    <string-array name="calendar_week_array2">
+        <item>M</item>
+        <item>T</item>
+        <item>W</item>
+        <item>T</item>
+        <item>F</item>
+        <item>S</item>
         <item>S</item>
     </string-array>
 </resources>
