--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -30,4 +30,22 @@
         <item name="android:navigationBarColor">@color/White</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+    <!-- 월간 캘린더 텍스트 스타일 -->
+    <style name="CalendarViewCustom">
+        <item name="android:textColor">@drawable/selector_monthly_calendar_event_text</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- 요일 -->
+    <style name="weekTextStyle">
+        <item name="android:textColor">#707070</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- 날짜 -->
+    <style name="dateTextStyle">
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
 </resources>
